crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__cfg-switch-exhaustive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/cfg-switch-exhaustive.js
---
import { c as _c } from "react/compiler-runtime";
// props.a.b should be added as a unconditional dependency to the reactive
// scope that produces x, since it is accessed unconditionally in all cfg
// paths
import { identity } from "shared-runtime";
function useCondDepInSwitch(props, other) {
	const $ = _c(3);
	let x;
	if ($[0] !== other || $[1] !== props.a.b) {
		x = {};
		bb0: switch (identity(other)) {
			case 1: {
				x.a = props.a.b;
				break bb0;
			}
			case 2: {
				x.b = props.a.b;
				break bb0;
			}
			default: {
				x.c = props.a.b;
			}
		}
		$[0] = other;
		$[1] = props.a.b;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useCondDepInSwitch,
	params: [{ a: { b: 2 } }, 2]
};
