crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__conditional-member-expr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/conditional-member-expr.js
---
import { c as _c } from "react/compiler-runtime";
// To preserve the nullthrows behavior and reactive deps of this code,
// Forget needs to add `props.a` as a dependency (since `props.a.b` is
// a conditional dependency, i.e. gated behind control flow)
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.a?.b) {
		x = [];
		x.push(props.a?.b);
		$[0] = props.a?.b;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: null }]
};
